[tool.poetry]
name = "common-utils"
version = "0.1.0"
description = "misc python utilites"
authors = ["alexg <compfaculty@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
numpy = "^1.19.4"
requests = "^2.24.0"
prettytable = "^1.0.1"
pytest = "^6.1.2"
ipython = "^7.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
